@@ -9,7 +9,9 @@
 ## A naive approximation for the prime counting function.
 #
 
-# F(n) = n^2 / ln(n!)
+# F(n) =  n^2 / ln(n!)
+#      =~ n^2 / (n * ln(n) - n)
+#      =~ n / (ln(n) - 1)
 
 use 5.010;
 use utf8;
@@ -17,10 +19,22 @@ use strict;
 use warnings;
 
 use lib qw(../lib);
-use Math::BigNum qw(:constant);
+use Math::BigNum qw(:constant e pi);
 
-foreach my $n (1 .. 6) {
+# pi(n) =~ n / (log(n) - log(n) / log(n/e))
+sub pi_approx {
+    my ($n) = @_;
+    $n / ($n->log - $n->log($n / e));
+}
+
+# Ramanujan's approximation for ln(n!)
+sub lnfac {
+    my ($n) = @_;
+    $n * log($n) - $n + log($n * (1 + 4 * $n * (1 + 2 * $n))) / 6 + log(pi) / 2;
+}
+
+foreach my $n (1 .. 26) {
     my $x = 10**$n;
-    my $f = ($x**2)->idiv(int log $x->fac);
-    say "PI($x) =~ $f";
+    my $f = $n <= 6 ? ($x**2)->idiv(int log $x->fac) : int($x**2 / lnfac($x));
+    say "PI($x) =~ ", pi_approx($x)->int, ' =~ ', $f;
 }
